EMBCDFA # 1274 - Fixed the DFA UI issues Fixed the issue with spaces on small owner business application Fixed spacing on the damaged property

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -58,9 +58,7 @@
                       </ul>
                     </div>
                     <div class="sub-heading radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
-                      <br/>
-                      <mat-label class="sub-heading">What type of small business?<span style="color:red" >*</span></mat-label>
-                      <br />
+                      <mat-label class="sub-heading" style="padding-left: 8px;">What type of small business?<span style="color:red" >*</span></mat-label>
                       <mat-radio-group
                         formControlName="smallBusinessOption"
                         class="primary-radio-group"
