--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -69,8 +69,8 @@
             <div *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value != 'false'">
             </div>
             <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value == 'false'">
-              You must have occupied the property as your principal residence at the time of te event to be eligible for DFA. <br/><br/>
-              You may call us to discuss further at 1-888-257-4777.<br/><br/>
+              You must have occupied the property as your principal residence at the time of te event to be eligible for DFA. <br/>
+              You may call us to discuss further at 1-888-257-4777.<br/>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
