--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.scss
@@ -6,6 +6,25 @@ mat-form-field {
     padding: 0 22px;
 }
 
+.infoText {
+  background: #F6F9FC 0% 0% no-repeat padding-box;
+  border: 1px solid #003366;
+  border-radius: 10px;
+  padding: 12px;
+  /*margin-top: 10px;*/
+  font-size: 10px;
+}
+
+.infoIconCol {
+  width: 20px;
+  padding-top: 2px;
+}
+
+.infoIconStyle {
+  font-size: 17px;
+  color: #003366;
+}
+
 .primary-radio-group {
   display: flex;
   flex-direction: column;
