EMBCDFA-1066: Integrate environment banner and alert banner into application

--- a/dfa/src/UI/embc-dfa/src/app/core/layout/environment-banner/environment-banner.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/core/layout/environment-banner/environment-banner.component.scss
@@ -8,3 +8,12 @@
         margin: 0px;
     }
 }
+  
+.env-border {
+    border: solid blue;
+    border-width: thin;
+    overflow: hidden;
+    display: block;
+    box-sizing: border-box;
+  }
+  
