--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -105,7 +105,7 @@
                   </p>
                   <div class="col-md-6">
                     <mat-form-field appearance="outline">
-                      <input [disabled]="isReadOnly" matInput formControlName="primaryContact" placeholder="User Id" maxlength="16" [(ngModel)]="primaryContactSearch" />
+                      <input [disabled]="isReadOnly" matInput formControlName="primaryContact" id="primaryContact" placeholder="User Id" maxlength="16" />
                     </mat-form-field>
                   </div>
                   <div class="col-md-2">
@@ -113,7 +113,7 @@
                     class="button-p save-button"
                     mat-stroked-button
                     type="button"
-                    (click)="searchForContact({primaryContactSearch})"
+                    (click)="searchForContact()"
                   >
                     Search for Contact
                   </button>
