--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -83,7 +83,7 @@
         </div>
         <div class="col-md-3">
           <span><b>Cause(s) of Damage</b></span><br />
-          <span id="spnCauseOfDamage">{{CombineCauseOfDamages(applItem)}}</span>
+          <span class="overflow-text" id="spnCauseOfDamage">{{CombineCauseOfDamages(applItem)}}</span>
         </div>
         <div class="col-md-3">
           <button
