--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
@@ -2,6 +2,10 @@
     border: 1px solid lightgrey;
 }
 
+.overflow-text {
+  overflow-wrap: break-word;
+}
+
 .content {
   margin: 10px;
   padding: 20px;
