--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -2,170 +2,91 @@
   <div class="row"
            *ngFor="let applItem of lstApplications"
            >
-    <!--<div class="row block">
-    <div class="row">
-      <div class="col-md-6">
-        <span>Event ID</span><br />
-        <span>{{applItem.dfa_eventid}}</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <span>Application Type</span><br />
-        <span>{{applItem.dfa_applicanttype}}</span>
-      </div>
-    </div>
-    </div>-->
-    <mat-card class="mat-elevation-z4 content" >
-
-      <div style="border-bottom: 1px solid lightgrey; padding-bottom: 20px; display: flex;">
+    
+    <mat-card class="mat-elevation-z4 content" [ngStyle]="{'border-left': '20px solid ' + applItem.statusColor}" >
+      <div style="border-bottom: 1px solid lightgrey; padding-bottom: 15px; display: flex;">
         <div class="col-md-3">
-          <span style="font-size: 20px;"><b>{{applItem.eventId == null ? "To Be Assigned" : applItem.eventId }}</b></span>
-        </div>
-        <div class="col-md-7">
-        </div>
-        <!--<div class="col-md-2" style="text-align: right">
-          <span>Status Last Updated</span><br />
-          <span style="font-size: 16px;">{{applItem.statusLastUpdated }}</span>
-        </div>-->
-      </div>
-      <div style="border-bottom: 1px solid lightgrey;padding-bottom:20px; height: 210px;width: 90%;min-width: 725px;">
-        <div class="col-md-3" style="margin-top: 20px;">
-          <span><b>Application Status</b></span><br />
-          <span *ngIf="applItem.isErrorInStatus == true" style="color: red;">Error in displaying status<br /></span>
-        </div>
-        <div *ngFor="let item of applItem.statusBar; let i=index" id="item{{i}}" class="stepsDesc col-md-1">
-          <span class="stepText">{{item.label}}</span>
-        </div>
-        <br style="clear: both;" />
-        <div *ngFor="let item of applItem.statusBar; let i=index" id="item{{i}}" [ngClass]="i == 0 ? 'nocircle col-md-1' : 'circle col-md-1'">
-          <!--<span [ngClass]="item.isCompleted == true ? 'material-icons' : 'material-symbols-outlined'" style="color: rgb(0, 128, 55);">
-            {{item.isCompleted == true ? 'check_circle' : 'circle'}}
-          </span>-->
-          <span *ngIf="item.isCompleted == true && applItem.isErrorInStatus == false" class="material-icons" style="color: rgb(21 178 89);">
-            check_circle
-          </span>
-          <span *ngIf="item.isCompleted == false && item.currentStep == true && applItem.isErrorInStatus == false" class="material-symbols-outlined" style="color: darkblue">
-            circle
-          </span>
-          <span *ngIf="item.isCompleted == false && item.currentStep == false && applItem.isErrorInStatus == false" class="material-symbols-outlined" style="color: lightgrey">
-            circle
-          </span>
-          <span *ngIf="applItem.isErrorInStatus == true" class="material-symbols-outlined" style="color: lightgrey">
-            circle
-          </span>
-          <!--<mat-icon>circle</mat-icon>
-          <span class="material-symbols-outlined">
-          circle
-          </span>-->
-        </div>
-        <br style="clear: both;" />
-        <div *ngFor="let item of applItem.statusBar; let i=index" id="item{{i}}" [ngClass]="item.currentStep == true ? 'stepsDesc col-md-2' : 'stepsDesc col-md-1'">
-            <span *ngIf="item.currentStep == true && applItem.isErrorInStatus == false && item.isCompleted == false" class="youAreHere">You are here</span>
-          </div>
-      </div>
-      <div class="row" style="padding-top: 20px;">
-        <!--<div class="col-md-3">
-          <span><b>Application Type</b></span><br />
-          <span>{{applItem.applicationType}}</span>
-        </div>
-        <div class="col-md-3">
-          <span><b>Damaged Property Address</b></span><br />
-          <span>{{applItem.damagedAddress}}</span>
-        </div>-->
-        <div class="col-md-3">
-          <span><b>Case Number</b></span><br />
+          <span><b>Case Number - </b></span>
           <span>{{applItem.caseNumber == null ? "To Be Assigned" : applItem.caseNumber }}</span>
         </div>
-        <div class="col-md-3">
-          <span><b>Date of Damage</b></span><br />
+        <div class="col-md-2">
+          <span><b>Date of Damage - </b></span>
           <span>{{applItem.dateOfDamage | date : "yyyy/MM/dd"}}</span>
         </div>
-        <div class="col-md-3">
-          <span><b>Cause(s) of Damage</b></span><br />
-          <span class="overflow-text" id="spnCauseOfDamage">{{CombineCauseOfDamages(applItem)}}</span>
+        <div class="col-md-4 wrap-text">
+          <span><b>Cause(s) of Damage - </b></span>
+          <span>{{CombineCauseOfDamages(applItem)}}</span>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="display: flex; justify-content: flex-end">
           <button
             class="application-button"
-            type="button"
+            *ngIf="applItem.currentApplication !== false"
             (click)="ViewProjects(applItem)"
-          >
+            type="button" >
+            <!--*ngIf="applItem.stage == 'Approved'"-->
+      
             Submit Projects
           </button>
           <button
             class="application-button"
             type="button"
+            *ngIf="applItem.status.indexOf('Draft') == -1"
             (click)="ViewApplication(applItem)"
           >
             View Application
           </button>
-           
+          <button
+            class="application-button"
+            type="button"
+            *ngIf="applItem.status.indexOf('Draft') > -1"
+            (click)="ViewApplication(applItem)"
+          >
+            Complete Application
+          </button>
+          
         </div>
       </div>
-      <!--<div class="row" style="padding-top: 35px;">
-        <button
-          class="col-md-2 application-button"
-          type="button"
-          *ngIf="applItem.primaryApplicantSignedDate || appType != 'current'"
-          
-        >
-          View Application
-        </button>
 
-        <button
-        class="col-md-2 application-button"
-        type="button"
-        *ngIf="!applItem.primaryApplicantSignedDate && appType == 'current'"
-        
-        >
-          Complete Application
-        </button>-->
+      <div style="width: 90%; min-width: 725px; display: flex; flex-direction: column;">
+        <div class="col-md-3" style="margin-top: 20px;">
+          <span *ngIf="applItem.isErrorInStatus == true" style="color: red;">Error in displaying status<br /></span>
+        </div>
+        <table cellpadding="0" cellspacing="0">
+          <tr>
+            <td colspan="3" *ngFor="let item of getItems(applItem.statusBar); let i=index" id="item{{i}}" [ngClass]="'headerlabelStyle'">
+              <span *ngIf="item.status != ''" class="stepText">{{item.status}}</span>
+            </td>
 
-        <!--<button
-          class="col-md-2 application-button whitebutton"
-          type="button"
-          *ngIf="applItem.primaryApplicantSignedDate && applItem.currentApplication === true"
-          (click)="EditApplication(applItem.applicationId, '3')"
-        >
-          Add to Clean Up Log
-        </button>
-
-        <button
-          class="col-md-2 application-button whitebutton"
-          type="button"
-          *ngIf="applItem.primaryApplicantSignedDate && applItem.currentApplication === true"
-          (click)="EditApplication(applItem.applicationId, '4')"
-        >
-          Add to Damaged Items
-        </button>
-
-        <button
-          class="col-md-2 application-button whitebutton"
-          type="button"
-          *ngIf="applItem.primaryApplicantSignedDate && applItem.currentApplication === true"
-          (click)="EditApplication(applItem.applicationId, '5')"
-        >
-          Add Supporting Docs
-        </button>
-
-        <button
-          class="col-md-2 application-button whitebutton"
-          type="button"
-          *ngIf="applItem.primaryApplicantSignedDate && applItem.currentApplication === true"
-          (click)="EditApplication(applItem.applicationId, '2')"
-        >
-          Add Other Contacts
-        </button>-->
-
-        <!--<button
-          class="application-button redbutton"
-          type="button"
-        >
-          Delete Application
-        </button>-->
-      <!--</div>-->
+          </tr>
+          <tr>
+            <td *ngFor="let item of applItem.statusBar; let i=index" id="item{{i}}" [ngClass]="item.status != '' ? 'labelStyle' : 'labelEmptyWidth'">
+              <!--<div *ngIf="item.status != '' && item.currentStep == false" [ngClass]=" i == 0 ? 'removeBorder' : 'lineConnector'"></div>-->
+              <div *ngIf="item.status != ''" [ngClass]="item.currentStep == false || item.status == 'Decision Made' ? 'alignStatus': (item.stage == '' ? 'alignStatus' : 'currentStatus')">
+                <span *ngIf="item.isCompleted == true && applItem.isErrorInStatus == false" class="material-icons" [ngStyle]="{'color': item.stage == 'Ineligible' || item.stage == 'Withdrwan' ? 'red' : 'rgb(21 178 89)'}">
+                  {{ item.stage == 'Ineligible' || item.stage == 'Withdrwan' ? 'cancel' : 'check_circle' }}
+                </span>
+                <span *ngIf="item.isCompleted == false && item.currentStep == true && applItem.isErrorInStatus == false && item.stage != ''">
+                  {{item.stage}}
+                </span>
+                <span *ngIf="item.isCompleted == false && item.currentStep == true && applItem.isErrorInStatus == false && item.stage == ''" class="material-symbols-outlined" [ngStyle]="{'color': item.status.indexOf('Draft') > -1 ? '#639DD4' : '#FDCB52'}">
+                  {{ item.status.indexOf('Draft') > -1 ? 'check_circle' : 'circle' }}
+                </span>
+                <span *ngIf="item.isCompleted == false && item.currentStep == false && applItem.isErrorInStatus == false" class="material-symbols-outlined" style="color: #FDCB52">
+                  circle
+                </span>
+                <span *ngIf="applItem.isErrorInStatus == true" class="material-symbols-outlined" style="color: #FDCB52">
+                  circle
+                </span>
+              </div>
+              <!--<div *ngIf="item.status != '' && item.currentStep == false && (i+1) < applItem.statusBar.length" class="lineConnector"></div>-->
+              <div class="lineConnector" *ngIf="item.status == '' && i > 1 && (i+1) < applItem.statusBar.length"></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+  
     </mat-card>
+
   </div>
 </div>
 <div class="content-container" style="padding-bottom: 100px; padding-top: 50px;" *ngIf="lstApplications.length == 0 && isLoading == false">
