--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
@@ -9,19 +9,27 @@
 .content {
   margin: 10px;
   padding: 20px;
+  min-width: 780px !important;
+}
+
+.wrap-text {
+  overflow-wrap: break-word;
 }
 
 .application-button {
   float: left !important;
-  background-color: #234075;
-  color: #ffffff;
-  height: 36px;
-  font-size: 13px;
-  padding-left: 10px;
-  padding-right: 10px;
+  color: #003366;
+  min-height: 32px;
+  font-size: 14px;
+  padding-left: 6px;
+  padding-right: 6px;
   max-width: 200px;
   margin-left: 2%;
-  font-weight: 600;
+  font-weight: bold;
+  border: 1px solid #003366 !important;
+  background: #f9fbfe 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  max-height: 44px;
 }
 
 .whitebutton {
@@ -39,28 +47,103 @@
 .nocircle {
   height: 12px;
   float: left;
-  padding-left: 8%;
-  margin-right: 20px;
+  padding-left: 6%;
+  /*margin-right: -86px;*/
   margin-top: 60px;
+  margin-right: 24px;
 }
 
 .circle {
   /*width: 100px;*/
   height: 12px;
+  float: left;
+  /*  padding-left: 17%;
+  margin-right: 24px;*/
+  /*margin: 60px 24px 0px 24px;*/
+  margin-top: 60px;
+  text-align: center;
+}
+
+.line {
+  /*width: 100px;*/
+  height: 12px;
   border-bottom: 2px solid black;
   float: left;
-  padding-left: 8%;
-  margin-right: 20px;
+  /*padding-left: 10%;*/
+  /*margin-right: 24px;*/
   margin-top: 60px;
+  /*width: 11.5%;*/
+}
+
+.labelStyle {
+  text-align: center;
+  width: 5%;
+  /*border: 1px solid black;*/
+}
+
+.headerlabelStyle {
+  text-align: center;
+  width: 20%;
+  min-width: 140px;
+}
+
+.removeBorder {
+  float: left;
+  width: 25%;
+  margin-top: 18px;
+}
+
+.lineConnector {
+  border: 1px inset lightgray;
+  margin-top: 15px;
+}
+
+.lineConnectorLeft {
+  float: left;
+  width: 25%;
+  margin-top: 18px;
+}
+
+.alignStatus {
+  /*  float: left;
+  width: 50%;*/
+  margin-top: 20px;
+}
+
+.lineConnectorRight {
+  float: right;
+  width: 25%;
+  margin-top: 18px;
+}
+
+.labelEmptyWidth {
+  width: 5%;
+  text-align: center;
+  /*border: 1px solid black;*/
+}
+
+.adjustLineWidth {
+  width: 8% !important;
+  padding-left: 0% !important;
+}
+
+.currentStatus {
+  color: #05325C;
+  padding: 5px 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  background: #639DD4 0% 0% no-repeat padding-box;
+  margin-top: 15px;
 }
 
 .stepsDesc {
   /*width: 100px;*/
   height: 12px;
   float: left;
-  padding-left: 7%;
-  margin-right: 20px;
+  /*padding-left: 6%;*/
+  /*margin-right: 23px;*/
   margin-top: 30px;
+  text-align: center;
 }
 
 .youAreHere {
@@ -73,12 +156,11 @@
 }
 
 .stepText {
-  color: #02029d;
-  font-size: 14px;
-  display: inline-flex;
+  color: #313132;
+  font-size: 15px;
 }
 
-@media (max-width: 1100px) and (min-width: 300px) {
+@media (max-width: 1200px) and (min-width: 300px) {
   .nocircle {
     height: 12px;
     float: left;
@@ -109,5 +191,11 @@
   .youAreHere {
     display: flex;
     width: 70px;
+  }
+
+  .headerlabelStyle {
+    text-align: center;
+    width: 20%;
+    min-width: 100px;
   }
 }
