--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -39,7 +39,7 @@
             class="application-button"
             type="button"
             *ngIf="applItem.status.indexOf('Draft') > -1"
-            (click)="ViewApplication(applItem)"
+            (click)="CompleteApplication(applItem)"
           >
             Complete Application
           </button>
