EMCRI-543 partial commit

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div style="width: 90%; min-width: 725px; display: flex; flex-direction: column;">
+      <div class="bottom-div">
         <div class="col-md-3" style="margin-top: 20px;">
           <span *ngIf="applItem.isErrorInStatus == true" style="color: red;">Error in displaying status<br /></span>
         </div>
