--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
@@ -10,10 +10,23 @@
   margin: 10px;
   padding: 20px;
   min-width: 780px !important;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-height: 250px;
+}
+
+.bottom-div {
+  width: 95%;
+  min-width: 725px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 8px 0;
 }
 
 .wrap-text {
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 .application-button {
