[EMCRI-663] New Contact screen work in progress. Primary contact search complete - Additional contacts next.

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/application-details/application-details.component.html
@@ -24,7 +24,7 @@
             <p class="sub-heading" style="font-size: 15px">
               Indigenous Governing Body & Local Authority Legal Name
             </p>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="fill">
               <input
                 formControlName="legalName"
                 matInput
