--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
@@ -145,7 +145,7 @@
   padding: 5px 10px;
   border-radius: 10px;
   font-weight: bold;
-  background: #639DD4 0% 0% no-repeat padding-box;
+  background: #FDCB52 0% 0% no-repeat padding-box;
   margin-top: 15px;
 }
 
